--- a/ProgettoEsame/.classpath
+++ b/ProgettoEsame/.classpath
@@ -7,5 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="LibrerieEsterne/postgresql-42.2.18.jar"/>
+	<classpathentry kind="lib" path="LibrerieEsterne/jcalendar-1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
